fix: update import paths for builder module in dashboard files
- Changed import paths from './builder-dist/index.mjs' to '../builder/dist/index.mjs' in multiple dashboard HTML files.
- Added importmap for Zod library in functional and visual dashboard HTML files.
- Enhanced server.js to serve builder dist files correctly while maintaining security checks.

--- a/packages/clinic-tests/builder_visual_dashboard.html
+++ b/packages/clinic-tests/builder_visual_dashboard.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UltraFastBuilder - Live Performance Visualizer</title>
+    <script type="importmap">
+    {
+        "imports": {
+            "zod": "https://cdn.jsdelivr.net/npm/zod@3/+esm"
+        }
+    }
+    </script>
     <style>
         * {
             margin: 0;
@@ -1003,7 +1010,7 @@
 
         try {
             // Import the actual UltraFastBuilder library with monitoring functions
-            const { builder, builderAsync, getDetailedPoolStats, resetPoolStats } = await import('./builder-dist/index.mjs');
+            const { builder, builderAsync, getDetailedPoolStats, resetPoolStats } = await import('../builder/dist/index.mjs');
             
             // Try local Zod first, then CDN fallbacks
             let z;
