--- a/packages/clinic-tests/functional_visual_dashboard_compact.html
+++ b/packages/clinic-tests/functional_visual_dashboard_compact.html
@@ -320,7 +320,7 @@
 
         async function init() {
             try {
-                const module = await import('./builder-dist/index.mjs');
+                const module = await import('../builder/dist/index.mjs');
                 pipe = module.pipe;
                 compose = module.compose;
                 curry = module.curry;
