--- a/packages/clinic-tests/customPicker_dashboard_compact.html
+++ b/packages/clinic-tests/customPicker_dashboard_compact.html
@@ -335,7 +335,7 @@
 
         async function init() {
             try {
-                const builderModule = await import('./builder-dist/index.mjs');
+                const builderModule = await import('../builder/dist/index.mjs');
                 customPicker = builderModule.customPicker;
                 pickFields = builderModule.pickFields;
                 createPicker = builderModule.createPicker;
