chore: bump version to 1.1.0 and update dependencies
- Updated version to 1.1.0 in package.json and related packages.
- Changed dependency references from file paths to workspace references in benchmarks and clinic-tests packages.
- Upgraded turbo dependency to version 2.5.8.
- Enhanced documentation to include new features like DynamicPick for field projection and updated the tagline in the docs.
- Adjusted the structure of the documentation sidebar to include new categories and improved organization.

--- a/packages/clinic-tests/customPicker_dashboard.html
+++ b/packages/clinic-tests/customPicker_dashboard.html
@@ -349,7 +349,7 @@
 <body>
     <div class="container">
         <h1>🚀 CustomPicker Performance Dashboard</h1>
-        <p class="subtitle">Comprehensive Benchmarking of Field Projection & Selection Methods</p>
+        <p class="subtitle">Comprehensive Benchmarking of DynamicPick & Selection Methods</p>
 
         <!-- Performance Canvas -->
         <div class="main-canvas-container">
