docs: enhance README and documentation for DynamicPick and functional programming features
- Updated README to include new features: DynamicPick for field projection and functional programming support.
- Improved performance metrics and examples for DynamicPick and Immutable state transformations.
- Renamed references from CustomPicker to DynamicPick in documentation and dashboard files for consistency.
- Removed outdated links and sections in the documentation to streamline content.

--- a/packages/clinic-tests/customPicker_dashboard.html
+++ b/packages/clinic-tests/customPicker_dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UltraFastBuilder - CustomPicker Performance Dashboard</title>
+    <title>UltraFastBuilder - DynamicPick (CustomPicker) Performance Dashboard</title>
     <script type="importmap">
     {
         "imports": {
@@ -348,8 +348,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>🚀 CustomPicker Performance Dashboard</h1>
-        <p class="subtitle">Comprehensive Benchmarking of DynamicPick & Selection Methods</p>
+        <h1>🚀 DynamicPick Performance Dashboard</h1>
+        <p class="subtitle">Comprehensive Benchmarking of Field Projection & Selection Methods</p>
 
         <!-- Performance Canvas -->
         <div class="main-canvas-container">
