--- a/packages/clinic-tests/customPicker_dashboard_compact.html
+++ b/packages/clinic-tests/customPicker_dashboard_compact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CustomPicker - Compact View</title>
+    <title>DynamicPick - Compact View</title>
     <script type="importmap">
     {
         "imports": {
@@ -202,8 +202,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>🎯 CustomPicker Performance</h1>
-        <p class="subtitle">Compact View</p>
+        <h1>🎯 DynamicPick Performance</h1>
+        <p class="subtitle">Compact View - Field Projection Benchmarks</p>
 
         <div class="card">
             <h3>⚙️ Test Configuration</h3>
